--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,60 @@
 </head>
 <body>
     <div>
+        <!--<select @n-change="onChangeMicrophone" :value="getSelectedInputDevice">
+            <option v-for="mic in getInputDeviceList"
+                    :value="mic.deviceId"
+                    :key="mic.deviceId"
+                    :selected="getSelectedInputDevice === mic.deviceId">
+                {{ mic.label }}
+            </option>
+        </select>
+        <br/>
+        <select @change="onChangeSpeakers" :value="getSelectedOutputDevice">
+            <option v-for="device in getOutputDeviceList"
+                    :value="device.deviceId"
+                    :key="device.deviceId"
+                    :selected="getSelectedOutputDevice === device.deviceId">
+                {{ device.label }}
+            </option>
+        </select>-->
+
+        <div>
+            <select id="microphoneEl"></select>
+            <select id="speakerEl"></select>
+        </div>
+
+
+        <div>
+            <div>
+                Mute when join
+                <input type="checkbox" id="muteWhenJoinInputEl"/>
+            </div>
+            <div>
+                DND
+                <input type="checkbox" id="DNDInputEl"/>
+            </div>
+        </div>
+
+        <div>
+            <div id="muteContainerEl">
+                <button class="muteButtonEl">
+                    Mute
+                </button>
+            </div>
+            <!--<button v-if="isMuted"
+                    @click="doMute(false)">
+                Unmute
+            </button>
+            <button v-else
+                    :disabled="!Object.keys(getActiveCalls).length"
+                    @click="doMute(true)">
+                Mute
+            </button>-->
+        </div>
+
+        <br>
+
         <form id="makeCallForm">
             <label>
                 Your target:
@@ -25,6 +79,40 @@
             </button>
         </form>
         <div id="callAddingIndicator" class="hidden">Calling...</div>
+
+        <div>
+            Add new call to current room
+            <input type="checkbox" id="addToCurrentRoomInputEl">
+        </div>
+
+        <br/>
+
+        <div>
+            <label for="inputLevel">Sensitivity (between 0 and 2):</label>
+            <input type="number"
+                   id="inputLevel"
+                   name="inputLevel"
+                   v-model="microphoneSensitivity"
+                   min="0"
+                   max="2"
+                   step="0.1"
+            >
+            <button @click="setMicrophoneSensitivity">Apply</button>
+        </div>
+        <div>
+            getter {{speakerVolume}}
+            value {{speakerVolumeLevel}}
+            <label for="outputLevel">Speaker volume (between 0 and 1):</label>
+            <input type="number"
+                   id="outputLevel"
+                   name="outputLevel"
+                   v-model="speakerVolumeLevel"
+                   min="0"
+                   max="1"
+                   step="0.1"
+            >
+            <button @click="setSpeakerVolumeLevel">Apply</button>
+        </div>
     </div>
 <script src="./index.ts" type="module"></script>
 </body>
