update: added active room selection and voice level indicator logic to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -126,6 +126,16 @@
             </form>
         </div>
 
+        <div id="agentVoiceLevelContainer"></div>
+
+        <div>
+            Active calls: <span id="activeCallsCounter">0</span>
+            <p>Your room: </p>
+            <select id="roomSelect">
+                <option value="" class="noData" selected>No room selected</option>
+            </select>
+        </div>
+
     </div>
 <script src="./index.ts" type="module"></script>
 </body>
