added missing methods to opensips

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,9 @@
         .hidden {
             display: none;
         }
+        .volume-wrapper {
+            margin: 0 10px;
+        }
     </style>
 </head>
 <body>
@@ -135,6 +138,12 @@
                 <option value="" class="noData" selected>No room selected</option>
             </select>
         </div>
+
+        <br>
+        <p>RoomList</p>
+        <br>
+
+        <div id="roomsContainer"></div>
 
     </div>
 <script src="./index.ts" type="module"></script>
