--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,59 @@
         .volume-wrapper {
             margin: 0 10px;
         }
+
+        select::-ms-expand {
+            display: none;
+        }
+        select {
+            display: inline-block;
+            box-sizing: border-box;
+            padding: 0.5em 2em 0.5em 0.5em;
+            border: 1px solid #eee;
+            font: inherit;
+            line-height: inherit;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            -ms-appearance: none;
+            appearance: none;
+            background-repeat: no-repeat;
+            background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
+            background-position: right 15px top 1em, right 10px top 1em;
+            background-size: 5px 5px, 5px 5px;
+        }
+
+        div {
+            font-size: 18px;
+            font-family: Calibri;
+        }
+
+        button {
+            background-color: #0085b9; /* Green */
+            border: none;
+            color: white;
+            padding: 10px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+
+        button:disabled,
+        button[disabled]{
+            background-color: #cccccc;
+        }
+
+        input[type=text], input[type=number] {
+            /*width: 100%;*/
+            padding: 10px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
@@ -42,13 +95,13 @@
         </div>
 
 
-        <div>
+        <div style="width: 300px; display: flex; justify-content: space-between; margin: 20px 0">
             <div>
-                Mute when join
+                <label for="muteWhenJoinInputEl">Mute when join</label>
                 <input type="checkbox" id="muteWhenJoinInputEl"/>
             </div>
             <div>
-                DND
+                <label for="DNDInputEl">DND</label>
                 <input type="checkbox" id="DNDInputEl"/>
             </div>
         </div>
@@ -84,7 +137,7 @@
         <div id="callAddingIndicator" class="hidden">Calling...</div>
 
         <div>
-            Add new call to current room
+            <label for="addToCurrentRoomInputEl">Add new call to current room</label>
             <input type="checkbox" id="addToCurrentRoomInputEl">
         </div>
 
