update: removed unused code

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,69 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Document</title>
-
-    <style>
-        .hidden {
-            display: none;
-        }
-        .volume-wrapper {
-            margin: 0 10px;
-        }
-
-        select::-ms-expand {
-            display: none;
-        }
-        select {
-            display: inline-block;
-            box-sizing: border-box;
-            padding: 0.5em 2em 0.5em 0.5em;
-            border: 1px solid #eee;
-            font: inherit;
-            line-height: inherit;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            -ms-appearance: none;
-            appearance: none;
-            background-repeat: no-repeat;
-            background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
-            background-position: right 15px top 1em, right 10px top 1em;
-            background-size: 5px 5px, 5px 5px;
-        }
-
-        div {
-            font-size: 18px;
-            font-family: Calibri;
-        }
-
-        button {
-            background-color: #0085b9; /* Green */
-            border: none;
-            color: white;
-            padding: 10px 25px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-        }
-
-        button:disabled,
-        button[disabled]{
-            background-color: #cccccc;
-        }
-
-        input[type=text], input[type=number] {
-            /*width: 100%;*/
-            padding: 10px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-    </style>
 </head>
 <body>
     <div id="loginPage">
@@ -85,10 +24,9 @@
                 <input type="text" name="domain">
             </label>
             <button type="submit">
-                Login
+                Initialize
             </button>
         </form>
-        <button>Register</button>
     </div>
     <div id="webRTCPage" style="display: none">
         <div>
@@ -97,7 +35,7 @@
         </div>
 
 
-        <div style="width: 300px; display: flex; justify-content: space-between; margin: 20px 0">
+        <div class="call-quick-actions">
             <div>
                 <label for="muteWhenJoinInputEl">Mute when join</label>
                 <input type="checkbox" id="muteWhenJoinInputEl"/>
@@ -114,15 +52,6 @@
                     Mute
                 </button>
             </div>
-            <!--<button v-if="isMuted"
-                    @click="doMute(false)">
-                Unmute
-            </button>
-            <button v-else
-                    :disabled="!Object.keys(getActiveCalls).length"
-                    @click="doMute(true)">
-                Mute
-            </button>-->
         </div>
 
         <br>
