update: button text hotfix

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@
                 <input type="text" name="domain">
             </label>
             <button type="submit">
-                Initialize
+                Register
             </button>
         </form>
     </div>
