update: fixed styles for demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="loginPage">
-        <form id="loginToAppForm">
+        <form id="loginToAppForm" class="login-form">
             <label>
                 Username:
                 <input type="text" name="username">
