--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <img src="public/logo.png" alt="OpenSIPS" height="64">
+    </div>
     <div id="loginPage">
         <form id="loginToAppForm" class="login-form">
             <label>
