Add: sendMessage method

--- a/demo/index.html
+++ b/demo/index.html
@@ -60,6 +60,24 @@
 
         <br>
 
+        <form id="sendMessageForm">
+            <label>
+                Your target:
+                <input type="text" name="target">
+            </label>
+            <label>
+                Your Message:
+                <input type="text" name="message">
+            </label>
+            <label>
+                Extra Headers (comma separated):
+                <textarea name="extraHeaders"></textarea>
+            </label>
+            <button type="submit">
+                Send message
+            </button>
+        </form>
+
         <form id="makeCallForm">
             <label>
                 Your target:
