--- a/demo/index.html
+++ b/demo/index.html
@@ -17,15 +17,15 @@
         <form id="loginToAppForm" class="login-form">
             <label>
                 Username:
-                <input type="text" name="username">
+                <input type="text" name="username" value="">
             </label>
             <label>
                 Password:
-                <input type="text" name="password">
+                <input type="text" name="password" value="">
             </label>
             <label>
                 Domain:
-                <input type="text" name="domain">
+                <input type="text" name="domain" value="">
             </label>
             <button type="submit">
                 Register
