--- a/demo/index.html
+++ b/demo/index.html
@@ -17,15 +17,15 @@
         <form id="loginToAppForm" class="login-form">
             <label>
                 Username:
-                <input type="text" name="username" value="">
+                <input type="text" name="username" value="YI3SEDhZ SuoiuDNK">
             </label>
             <label>
                 Password:
-                <input type="text" name="password" value="">
+                <input type="text" name="password" value="FwT2NFr18eWMDwXS F9HtwoJH7910a6TS">
             </label>
             <label>
                 Domain:
-                <input type="text" name="domain" value="">
+                <input type="text" name="domain" value="sip06.voicenter.co">
             </label>
             <button type="submit">
                 Register
