Fixed message session saving

--- a/demo/index.html
+++ b/demo/index.html
@@ -150,6 +150,7 @@
         <br>
 
         <div id="roomsContainer"></div>
+        <div id="messagesContainer"></div>
 
     </div>
 <script src="./index.ts" type="module"></script>
