--- a/demo/index.html
+++ b/demo/index.html
@@ -133,7 +133,17 @@
 
         <div id="roomsContainer"></div>
 
-        <form id="sendMessageForm">
+        <form id="videoCallForm">
+            <label>
+                Join video room:
+                <input type="text" placeholder="Room" name="target">
+            </label>
+            <button type="submit">
+                Join
+            </button>
+        </form>
+
+<!--        <form id="sendMessageForm">
           <label id="msrpTargetLabel">
             Your target:
             <input type="text" name="target">
@@ -150,7 +160,7 @@
             Send message
           </button>
         </form>
-        <div id="messagesContainer"></div>
+        <div id="messagesContainer"></div>-->
 
     </div>
 <script src="./index.ts" type="module"></script>
