Added jwt token optional property and push notification extra headers config

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,10 @@
                 <input type="text" name="password" value="">
             </label>
             <label>
+                JWT Token:
+                <input type="text" name="token" value="">
+            </label>
+            <label>
                 Domain:
                 <input type="text" name="domain" value="">
             </label>
