--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
             </label>
             <label>
                 Domain:
-                <input type="text" name="domain" value="">
+                <input type="text" name="domain" value="wss07.voicenter.co">
             </label>
             <button type="submit">
                 Register
@@ -42,6 +42,7 @@
             <select id="speakerEl"></select>
         </div>
 
+        <div id="logs"></div>
 
         <div class="call-quick-actions">
             <div>
