Removed logData function

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
             </label>
             <label>
                 Domain:
-                <input type="text" name="domain" value="wss07.voicenter.co">
+                <input type="text" name="domain" value="">
             </label>
             <button type="submit">
                 Register
@@ -41,8 +41,6 @@
             <select id="microphoneEl"></select>
             <select id="speakerEl"></select>
         </div>
-
-        <div id="logs"></div>
 
         <div class="call-quick-actions">
             <div>
