--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
     </div>
     <div id="loginPage">
         <form id="loginToAppForm" class="login-form">
+            <h3>V1</h3>
             <label>
                 Username:
                 <input type="text" name="username" value="">
@@ -41,6 +42,8 @@
             <select id="microphoneEl"></select>
             <select id="speakerEl"></select>
         </div>
+
+        <div id="logs"></div>
 
         <div class="call-quick-actions">
             <div>
