Implemented receiving publishers and processing paulisher streams

--- a/demo/index.html
+++ b/demo/index.html
@@ -139,7 +139,11 @@
         <form id="videoCallForm">
             <label>
                 Join video room:
-                <input type="text" placeholder="Room" name="target">
+                <input type="text" placeholder="Room" name="target" value="abcd">
+            </label>
+            <label>
+                Display name:
+                <input type="text" placeholder="Name" name="name" value="User1">
             </label>
             <button type="submit">
                 Join
